# fine_tuning_embedding_models

./: .gitignore  domain_specific_eval.ipynb  main.py  pyproject.toml  test_dataset.json  train_dataset.json
