[project]
name = "fine-tuning-embedding-models"
version = "0.1.0"
description = "Fine-tuning and evaluation of embedding models"
readme = "README.md"

# Stable Python range for Windows + ML
requires-python = ">=3.11,<3.13"

dependencies = [
    "datasets>=2.20.0",
    "sentence-transformers>=5.2.0",
    "tensorboard>=2.15.0",
    "transformers>=4.48.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
